feat: 支持当前用户修改密码
